# MosekCOModel.rust

./: .gitlab-ci.yml  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  benches.htcondor  htcondor  run_benchmarks.py
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: exprs.rs  performance.rs
condor/: run_benchmarks.sh
examples/: TrafficNetworkModel.rs  baker.rs  ceo1.rs  cqo1.rs  demo1.rs  diet.rs  djc1.rs  duality.rs  eval.rs  gp1.rs  lj-outer.rs  lo1.rs  lo1_optserver.rs  logistic.rs  milo1.rs  portfolio_1_basic.rs  portfolio_2_frontier.rs  portfolio_3_impact.rs  portfolio_4_transcost.rs  portfolio_5_card.rs  pow1.rs  sdo1.rs  sdo2.rs  sdo3.rs  sospoly.rs  stacking.rs  sudoku.rs  total_variation.rs  traffic_network.rs  trigpoly.rs  tsp.rs  whales.rs
examples/WIP/: TrafficNetworkModel.rs  djc1.rs  eval.rs  portfolio_6_factor.rs  sdo1.rs  sospoly.rs
examples/compare/: Cargo.toml  compare.rs  timing.java
examples/compare/java/: timing.java
examples/compare/src/: main.rs  mul2.rs  mul3.rs  runtest.rs  tests.rs
examples/demos/: Cargo.toml  README.md
examples/demos/ellipsoid-approximation/: Cargo.toml
examples/demos/ellipsoid-approximation-3d/: Cargo.toml
examples/demos/ellipsoid-approximation-3d/src/: main.rs
examples/demos/ellipsoid-approximation/src/: main.rs
examples/demos/ellipsoids/: Cargo.toml  README.md
examples/demos/ellipsoids/src/: lib.rs
examples/demos/lowner-john-2d/: Cargo.toml
examples/demos/lowner-john-2d/src/: main.rs
examples/demos/lowner-john-outer-3d/: Cargo.toml
examples/demos/lowner-john-outer-3d/src/: main.rs
examples/demos/mosekcomodel_highs/: Cargo.toml
examples/demos/optserver/: Cargo.toml
examples/demos/optserver/examples/: lo1.rs
examples/demos/optserver/src/: lib.rs  model.rs
examples/demos/optserver/src/model/: json.rs  mod.rs
examples/demos/total-variation/: Cargo.toml
examples/demos/total-variation/src/: main.rs
examples/demos/trigpoly/: Cargo.toml
examples/demos/trigpoly/src/: main.rs
examples/demos/truss/: Cargo.toml  README.md
examples/demos/truss/data/: bridge.trs
examples/demos/truss/src/: main.rs
examples/demos/tsp/: Cargo.toml
examples/demos/tsp/src/: main.rs
examples/ellipsoid_approximation/: Cargo.toml  README.md
examples/ellipsoid_approximation/src/: main.rs
examples/ellipsoid_approximation_3d/: Cargo.toml
examples/ellipsoid_approximation_3d/src/: main.rs
examples/ellipsoids/: Cargo.toml
examples/ellipsoids/doc/: README.tex
examples/ellipsoids/src/: lib.rs
examples/lowner-john-2d/: Cargo.toml  README.md
examples/lowner-john-outer/: README.md
examples/lowner-john-outer-3d/: Cargo.toml
examples/lowner-john-outer-3d/src/: main.rs
examples/lowner-john-outer/src/: main.rs
examples/truss/: Cargo.toml
examples/truss/data/: bridge.trs  truss1.trs
examples/truss/doc/: README.tex
examples/truss/src/: main.rs
examples/truss3d/src/: main.rs  truss.rs
examples/whales/: Cargo.toml
examples/whales/src/: main.rs  matrix.rs  utils2d.rs  whales.rs
mosekcomodel-highs/: Cargo.toml  README.md
mosekcomodel-highs/examples/: lo1.rs  milo1.rs
mosekcomodel-highs/src/: lib.rs
mosekcomodel-mosek/: Cargo.toml
mosekcomodel-mosek/examples/: baker.rs  demo1.rs  djc1.rs  gp1.rs  lo1_optserver.rs  logistic.rs  milo1.rs  portfolio_4_transcost.rs  portfolio_5_card.rs  pow1.rs  sdo1.rs  sdo2.rs  sdo3.rs  sudoku.rs  total_variation.rs  tsp.rs
mosekcomodel-mosek/examples/WIP/: sospoly.rs
mosekcomodel-mosek/examples/compare/: Cargo.toml  README.md
mosekcomodel-mosek/examples/compare/src/: main.rs
mosekcomodel-mosek/examples/demos/: Cargo.toml  README.md
mosekcomodel-mosek/examples/demos/ellipsoid-approximation/: Cargo.toml
mosekcomodel-mosek/examples/demos/ellipsoid-approximation-3d/: Cargo.toml  README.md
mosekcomodel-mosek/examples/demos/ellipsoid-approximation-3d/src/: main.rs
mosekcomodel-mosek/examples/demos/ellipsoids/: Cargo.toml
mosekcomodel-mosek/examples/demos/ellipsoids/src/: lib.rs
mosekcomodel-mosek/examples/demos/lowner-john-2d/: Cargo.toml  README.md
mosekcomodel-mosek/examples/demos/lowner-john-2d/src/: main.rs
mosekcomodel-mosek/examples/demos/lowner-john-outer-3d/: Cargo.toml  README.md
mosekcomodel-mosek/examples/demos/lowner-john-outer-3d/src/: main.rs
mosekcomodel-mosek/examples/demos/optserver/: Cargo.toml  README.md
mosekcomodel-mosek/examples/demos/optserver/src/: lib.rs
mosekcomodel-mosek/examples/demos/optserver/src/model/: mod.rs
mosekcomodel-mosek/examples/demos/total-variation/: Cargo.toml
mosekcomodel-mosek/examples/demos/trigpoly/: Cargo.toml
mosekcomodel-mosek/examples/demos/truss/: Cargo.toml
mosekcomodel-mosek/examples/demos/truss/src/: main.rs
mosekcomodel-mosek/examples/demos/tsp/: Cargo.toml
mosekcomodel-mosek/examples/demos/tsp/src/: main.rs
mosekcomodel-mosek/src/: lib.rs
mosekcomodel-optserver/: Cargo.toml  README.md
mosekcomodel-optserver/examples/: ceo1.rs  cqo1.rs  gp1.rs  lo1.rs  milo1.rs  portfolio_1_basic.rs
mosekcomodel-optserver/src/: bio.rs  json.rs  lib.rs  msto.rs
mosekcomodel-optserver/src/pipe/: mod.rs
mosekcomodel-optserver/tests/: lo1-sol.b
notes/: NOTES.md  TODO.md
src/: disjunction.rs  domain.rs  dummy.rs  experimental.rs  expr.rs  lib.rs  matrix.rs  model.rs  optserver.rs  solver.rs  utils.rs  variable.rs  variable_index.rs
src/constraint/: mod.rs
src/domain/: linear.rs  mod.rs  psd.rs  ranged.rs
src/expr/: add.rs  dot.rs  eval.rs  index.rs  mod.rs  mul.rs  workstack.rs
src/model/: mod.rs  mosekmodel.rs
src/optserver/: http.rs  json.rs  mod.rs
src/utils/: iter.rs  mod.rs
src/variable/: index.rs  mod.rs
tests/: chainsing.rs  expr_tests.rs  mul.rs
utils/: Cargo.toml
utils/src/: iter.rs  lib.rs
