[package]
name = "mosekcomodel"
version = "0.1.0-alpha.0"
edition = "2021"
rust-version = "1.77.0"
description = "Library for Conic Optimization Modeling with Mosek"
authors = [ "Ulf Worsøe <ulf.worsoe@mosek.com>" ]
keywords = ["mosek","optimization","conic_optimization","linear_optimization","integer_optimization","conic_modeling"]
categories = ["mathematics","science"]
license = "MIT"
license-file = "LICENSE"
# repository =
# documentation = 
homepage = "https://mosek.com"
readme = "README.md"

[workspace]
members = ["utils"]

[dependencies]
itertools = "0.10"
mosek = "~11.0.0"
rand_distr = "0.4.3"
utils = { path = "utils" }
#mosek = { path = "../Mosek.rust" }

[dev-dependencies]
criterion = { version = "0.5.1", features = [ "html_reports" ] }
rand = "0.8.5"

[[bench]]
name="exprs"
harness = false

[[example]]
name = "eval"
crate-type = ["cdylib"]

