[package]
name = "mosekcomodel"
version = "0.1.0-alpha.2"
edition = "2021"
rust-version = "1.77.0"
description = "Library for Conic Optimization Modeling with Mosek"
authors = [ "Ulf Worsøe <ulf.worsoe@mosek.com>" ]
keywords = ["mosek","optimization","conic_modeling"]
categories = ["mathematics","science"]
license = "MIT"
repository = "https://github.com/MOSEK/MosekCOModel.rust"
#documentation = 
homepage = "https://mosek.com"
readme = "README.md"

#[lib]
#crate-type = ["dylib"]

[dependencies]
itertools = "0.14"
rand_distr = "0.4.3"
mosek = "~11.0.0"
#mosek = { path = "../Mosek.rs/11.0" }

[dev-dependencies]
criterion = { version = "0.5.1", features = [ "html_reports" ] }
rand = "0.8.5"

[[bench]]
name="exprs"
harness = false

[[example]]
name = "eval"
crate-type = ["cdylib"]

[[bin]]
name = "compare"
path = "examples/compare/compare.rs"
