[package]
name = "mosekcomodel"
version = "0.4.1"
edition = "2021"
rust-version = "1.85.0"
description = "Library for Conic Optimization Modeling with Mosek"
authors = [ "Ulf Worsøe <ulf.worsoe@mosek.com>" ]
keywords = ["mosek","optimization","conic_optimization","linear_programming"]
categories = ["mathematics","science"]
license = "MIT"
repository = "https://github.com/MOSEK/MosekCOModel.rust"
#documentation = 
homepage = "https://mosek.com"
readme = "README.md"

[workspace]
resolver = "3"

members = [ "mosekcomodel-mosek", 
            "mosekcomodel-highs"]

#[lib]
#crate-type = ["dylib"]

[dependencies]
itertools = "0.14"
mosek = "~11.0.0"
#mosek = { version = "~11.0.0", path = "/home/ulfw/Project/Mosek.rs" }

[dev-dependencies]
rand = "0.8.5"

[[bench]]
name="exprs"
harness = false


