[package]
name = "mosekcomodel_mosek"
version = "0.4.0"
edition = "2021"
homepage = "https://mosek.com"
description = "MOSEK backend for mosekcomodel"

authors = [ "Ulf Worsøe <ulf.worsoe@mosek.com>" ]
keywords = ["mosek","optimization","conic_optimization","linear_programming"]
license = "MIT"
categories = ["mathematics","science"]

[dependencies]
mosek = "~11.0.0"
itertools = "0.14"
mosekcomodel = { version="0.3.0", path=".." }

[dev-dependencies]
criterion = { version = "0.5.1", features = [ "html_reports" ] }
rand = "0.8.5"
rand_distr = "0.4.3"
