[package]
name = "demos"
version = "0.1.0"
edition = "2021"

[workspace]

members = [ "ellipsoid-approximation", 
            "ellipsoid-approximation-3d", 
            "lowner-john-2d",
            "lowner-john-outer-3d",
            "ellipsoids",
            "truss",
            "trigpoly",
            "total-variation", 
            "tsp", 
            "optserver",
            ]

[dependencies]
serde = "1.0.219"
ureq = "3.0.11"
