[package]
name = "ellipsoid-approximation-3d"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", default_features = false, features = ["bevy_core_pipeline","bevy_render","x11","bevy_ui","bevy_scene", "bevy_gizmos","bevy_pbr"]  }
ellipsoids = { version = "0.1.0", path = "../ellipsoids" }
glam = "0.28.0"
itertools = "0.13.0"
mosekmodel = { version = "0.1.0", path = "../.." }
