[package]
name = "trigpoly"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-rs = "0.19.4"
ellipsoids = { version = "0.1.0", path = "../ellipsoids" }
glam = "0.28.0"
gtk = { version = "0.8.0", package = "gtk4", features = ["v4_6"] }
itertools = "0.13.0"
mosekcomodel = { version = "0.1.1", path = "../../.." }
